k8s-yaml/monitoring/blackbox-exporter/blackbox-exporter-Ingress-v19.0+.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: blackbox-exporter
  namespace: monitoring
  annotations:
    prometheus.io/probed: 'true'   
spec:
  rules:
    - host: blackbox.tycng.com
      http:
        paths:
          - pathType: ImplementationSpecific
            path: /
            backend:
              service: 
                name: blackbox-exporter
                port: 
                  name: http
